report BoxedPrimitiveConstructor as error